<resources>
    <string name="app_name">WaterAssistant</string>
    <string name="str_washhand">洗手</string>
    <string name="str_bath">洗澡</string>
    <string name="str_cloth">洗衣</string>
    <string name="str_food">煮饭</string>
    <string name="str_clean">清洁</string>
    <string name="str_flush">马桶</string>
    <string name="str_car">洗车</string>

    <string name="handmax">3</string>
    <string name="bathmax">28</string>
    <string name="clothmax">400</string>
    <string name="foodmax">80</string>
    <string name="cleanmax">400</string>
    <string name="flushmax">5</string>
    <string name="carmax">90</string>

    <string name="str_settitle1">每次用水量：</string>
    <string name="str_settitle2">每分钟用水量：</string>

    <string name="str_undefinition">同步</string>
</resources>
